# ParameterSerializer

./: .travis.yml  CMakeLists.txt  README.md  README.rst
cmake/: CMakeLists.txt  FindJsonCpp.cmake  ParameterSerializerConfig.cmake.in
include/: CMakeLists.txt  itkBoolArrayValue.h  itkBoolValue.h  itkDoubleArrayValue.h  itkDoubleValue.h  itkFloatArrayValue.h  itkFloatValue.h  itkIntegerArrayValue.h  itkIntegerValue.h  itkJsonCppArchiver.h  itkParameterArchiver.h  itkParameterSerializer.h  itkParameterSerializerArrayValue.h  itkParameterSerializerValue.h  itkParameterValue.h  itkStringArrayValue.h  itkStringValue.h  itkUnsignedIntegerArrayValue.h  itkUnsignedIntegerValue.h
include/Core/: CMakeLists.txt
include/Core/Common/: itkImageToImageFilterSerializer.h  itkImageToImageFilterSerializer.hxx  itkInPlaceImageFilterSerializer.h  itkInPlaceImageFilterSerializer.hxx  itkObjectSerializer.h
include/Filtering/: CMakeLists.txt
include/Filtering/ImageGradient/: itkGradientMagnitudeImageFilterSerializer.h  itkGradientMagnitudeRecursiveGaussianImageFilterSerializer.h  itkGradientMagnitudeRecursiveGaussianImageFilterSerializer.hxx
include/Numerics/: CMakeLists.txt
include/Numerics/Optimizers/: itkGradientDescentOptimizerSerializer.h  itkGradientDescentOptimizerSerializer.hxx  itkOptimizerSerializer.h
src/: CMakeLists.txt  itkJsonCppArchiver.cxx  itkParameterArchiver.cxx  itkParameterSerializer.cxx
src/Core/Common/: itkObjectSerializer.cxx
src/Numerics/Optimizers/: itkOptimizerSerializer.cxx
test/: CMakeLists.txt
test/Filtering/ImageGradient/: CMakeLists.txt  itkGradientMagnitudeRecursiveGaussianImageFilterSerializerTest.cxx  itkGradientMagnitudeRecursiveGaussionImageFilterSerializerTest.cxx
test/Numerics/Optimizers/: CMakeLists.txt  itkGradientDescentOptimizerSerializerTest.cxx
